--- a/html/about.html
+++ b/html/about.html
@@ -46,31 +46,29 @@
 						  </svg>
 						</button>
 						<!-- Profile dropdown -->
-						<div class="ml-3 relative">
+						<div class="ml-3 relative transition-all">
 							<div>
-							<button type="button" onclick="show_hide()" class="bg-gray-800 flex text-sm rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
+							<button type="button" onclick="myFunction()" class=" menu-button bg-gray-800 flex text-sm rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
 								<span class="sr-only">Open user menu</span>
 								<img id="pfp" class="h-8 w-8 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
 							</button>
 							</div>
-
-							<!--
-							Dropdown menu, show/hide based on menu state.
-
-							Entering: "transition ease-out duration-100"
-								From: "transform opacity-0 scale-95"
-								To: "transform opacity-100 scale-100"
-							Leaving: "transition ease-in duration-75"
-								From: "transform opacity-100 scale-100"
-								To: "transform opacity-0 scale-95"
-							-->
-							<div id="dropdownInformation" class="hidden origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
-							<!-- Active: "bg-gray-100", Not Active: "" -->
+							<div id="dropdownInformation" class="menu dropdown-content hidden origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
 							<a href="/account" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-0">Your Profile</a>
 							<a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-1">Settings</a>
 							<a class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2">Sign out</a>
 							</div>
 						</div>
+						<script>
+							const fff = document.querySelector("button.menu-button");
+							const xxx = document.querySelector(".menu");
+			
+							fff.addEventListener("click", () => {
+								xxx.classList.toggle("hidden");
+							});
+						</script>
+
+
 					<!-- Mobile menu button -->
 					<div class="md:hidden flex items-center">
 						<button class="outline-none mobile-menu-button">
@@ -90,8 +88,8 @@
 				</div>
 			</div>
 			<!-- mobile menu -->
-			<div class="hidden mobile-menu">
-				<ul class="">
+			<div class="hidden mobile-menu h-screen w-screen bg-gray-700 m-0 transition-all text-white">
+				<ul class="h-full w-screen text-wh">
 					<li class="active"><a href="index.html" class="block text-sm px-2 py-4 text-white bg-cyan-500 font-semibold">Home</a></li>
 					<li><a href="#services" class="block text-sm px-2 py-4 hover:bg-cyan-500 transition duration-300">Services</a></li>
 					<li><a href="#about" class="block text-sm px-2 py-4 hover:bg-cyan-500 transition duration-300">About</a></li>
@@ -232,18 +230,6 @@
 <script defer src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script defer src="/js/init.js" type="module"></script>
-<script>
-	function show_hide() {  
-         var click = document.getElementById("dropdownInformation");  
-         if(click.style.display ="none") {  
-            click.style.display ="block";  
-         } else {  
-            click.style.display ="none"; 
-
-         }   
-      }  
-
-</script>
 
 </html>
 
