--- a/html/readNovel.html
+++ b/html/readNovel.html
@@ -77,7 +77,7 @@
 
 			<!--Title-->
 			<div class="font-sans">
-				<p class="text-base md:text-sm text-cyan-700 font-bold">&lt; <a href="#" class="text-base md:text-sm text-cyan-700 font-bold no-underline hover:underline">BACK TO HOME</a></p>
+				<p class="text-base md:text-sm text-cyan-700 font-bold">&lt; <a href="/" class="text-base md:text-sm text-cyan-700 font-bold no-underline hover:underline">BACK TO HOME</a></p>
 						<h1 id="chapTitle" class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl"></h1>
 						<p id="chapDate" class="text-sm md:text-base font-normal text-gray-600"></p>
 			</div>
@@ -248,7 +248,6 @@
 
 	<script>
 		/* Progress bar */
-		//Source: https://alligator.io/js/progress-bar-javascript-css-variables/
 		var h = document.documentElement,
 			b = document.body,
 			st = 'scrollTop',
