--- a/html/comic.html
+++ b/html/comic.html
@@ -149,6 +149,7 @@
                                 <div class="mt-1 flex rounded shadow-sm">
                                   <input required type="text" maxlength="50" name="title" id="title" class="focus:ring-cyan-500 focus:border-cyan-500 flex-1 block w-full rounded-none rounded-r-md sm:text-sm border-gray-300" placeholder="Chapter Title">
                                 </div>
+                                <p>Name the panels for your chapter as 1.jpg, 2.jpg, etc.</p>
                               </div>
                             </div>
                 
@@ -156,19 +157,19 @@
                             <label class="block text-sm font-medium text-gray-700"> Upload files </label>
                             <div class="grid my-3 grid-flow-row grid-cols-2">
                                 <div class="flex gap-3 text-sm">
-                                    <button type="button" class="bg-gray-500 hover:bg-blue-700 text-white font-bold py-1 px-4 rounded-full">
+                                    <input onchange="previewPanels(event)" id="panels" name="files[]" type="file" accept=".jpg" multiple class="bg-gray-500 hover:bg-blue-700 text-white font-bold py-1 px-4 rounded-full">
                                         Upload Files
-                                      </button>
+                                      </input>
                                       <button type="button" class="bg-gray-500 hover:bg-blue-700 text-white font-bold py-1 px-4 rounded-full">
                                         Delete All
                                       </button>
                                 </div>
-                                <div class="text-sm text-gray-500 flex mr-2 justify-end grid-rows-1">232KB <span class="font-bold text-gray-900">/</span> 20MB</div>
+                                <p id="totalSize" class="text-sm text-gray-500 flex mr-2 justify-end grid-rows-1">0 MB / 20 MB</p>
                             </div>
                             <div class="flex flex-col w-full overflow-y-auto text-center">
                               <div class="mt-1 flex justify-center px-6 pt-5 pb-6 border-2 border-gray-300 border-dashed rounded-md w-full max-h-96">
-                                <div class="grid lg:grid-cols-4 w-full overflow-y-auto">
-                                    <div class="w-full p-4 lg:w-50 lg:h-full">
+                                <div id="panelPreviewContainer" class="grid lg:grid-cols-4 w-full overflow-y-auto">
+                                    <!-- <div class="w-full p-4 lg:w-50 lg:h-full">
                                         <div class=" bg-white border rounded shadow-sm ">
                                             <div class="relative">
                                                   <div class=" top-0 right-0 p-0 m-0 absolute">
@@ -212,7 +213,7 @@
                                             </div>
                                           
                                         </div>
-                                    </div>
+                                    </div> -->
 
                                 </div>
                             </div>
