--- a/html/comic.html
+++ b/html/comic.html
@@ -160,7 +160,7 @@
                                     <input onchange="previewPanels(event)" id="panels" name="files[]" type="file" accept=".jpg" multiple class="bg-gray-500 hover:bg-blue-700 text-white font-bold py-1 px-4 rounded-full">
                                         Upload Files
                                       </input>
-                                      <button type="button" class="bg-gray-500 hover:bg-blue-700 text-white font-bold py-1 px-4 rounded-full">
+                                      <button onclick="deleteAll()" type="button" class="bg-gray-500 hover:bg-blue-700 text-white font-bold py-1 px-4 rounded-full">
                                         Delete All
                                       </button>
                                 </div>
@@ -225,8 +225,8 @@
                             </div>
                           </div>
                           <div class="px-4 py-3 text-right sm:px-6">
-                            <button type="button" id="btnSaveDraft" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500">Save Draft</button>
-                            <button type="button" id="btnPublish" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500">Publish</button>
+                            <button type="button" id="btnSaveDraft" onclick="saveChanges(false)" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500">Save Draft</button>
+                            <button type="button" id="btnPublish" onclick="saveChanges(true)" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500">Publish</button>
                           </div>
                         </div>
                         
