--- a/html/home.html
+++ b/html/home.html
@@ -68,6 +68,10 @@
         <!-- Profile dropdown -->
         <div class="ml-3 relative">
           <div>
+            <div id="authButtons" class="hidden md:flex items-center space-x-3 ">
+              <a href="/signin" class="py-2 px-2 font-medium text-gray-300 rounded hover:bg-cyan-500 hover:text-white transition duration-300">Log In</a>
+              <a href="/signup" class="py-2 px-2 font-medium text-white bg-cyan-500 rounded hover:bg-cyan-400 transition duration-300">Sign Up</a>
+            </div>
             <button id="toggleprofile" class="flex text-sm border-2 object-cover border-transparent rounded-full focus:outline-none focus:border-white transition duration-150 ease-in-out" id="user-menu" aria-label="User menu" aria-haspopup="true">
               <img class="h-8 w-8 rounded-full" id="pfp" src="" alt="">
             </button>
